Enhance service and utility tests with AssertJ and better coverage
- Replace JUnit assertions with fluent AssertJ assertions
- Add @DisplayName annotations for better test documentation
- Remove Thread.sleep from JwtUtilTest for faster, deterministic tests
- Add 10 new edge case tests (79 → 89 total tests)
- Follow Arrange-Act-Assert pattern consistently

New tests include: empty list handling, boundary conditions,
special character handling, and security edge cases.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>